# backup-docker-to-local

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  MIRRORS  Makefile  README.md  Todo.md  backup-docker-to-local.py  database_entry_seeder.py  databases.csv.tpl  docker-volume-backup.py  docker-volume-backup.sh  docker-volume-recover.sh  pyproject.toml  recover-docker-from-local.sh  requirements.yml  restore_backup.py  restore_postgres_databases.py
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
artifacts/: debug-dind-20251226141235.txt  debug-dind-20251226180030.txt  debug-dind-20251226180450.txt  debug-host-20251226141235.txt  debug-host-20251226180030.txt  debug-host-20251226180450.txt  dind-events-20251226141235.txt  dind-events-20251226180030.txt  dind-events-20251226180450.txt  dind-logs-20251226141235.txt  dind-logs-20251226180030.txt  dind-logs-20251226180450.txt
scripts/: backup.sh  test-e2e.sh
tests/e2e/: helpers.py  test_e2e_cli_contract_dump_only_sql.py  test_e2e_dump_only_fallback_to_files.py  test_e2e_dump_only_sql_mixed_run.py  test_e2e_files_full.py  test_e2e_files_no_copy.py  test_e2e_images_no_backup_required_early_skip.py  test_e2e_mariadb_anonymous_preemption.py  test_e2e_mariadb_full.py  test_e2e_mariadb_no_copy.py  test_e2e_postgres_empty_drop_hard.py  test_e2e_postgres_full.py  test_e2e_postgres_no_copy.py  test_e2e_postgres_single_transaction_live_writer.py  test_e2e_seed_star_and_db_entries_backup_postgres.py  test_e2e_swarm_task_skip.py
tests/unit/: test_backup.py
(+31 files in other folders)
